--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:
+metadata: 
   name: nginx-deployment
-spec:
-  selector:
-    matchLabels:
+spec: 
+  replicas: 2
+  selector: 
+    matchLabels: 
       app: nginx
-  replicas: 2 # tells deployment to run 2 pods matching the template
-  template:
-    metadata:
-      labels:
+  template: 
+    metadata: 
+      labels: 
         app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
+    spec: 
+      containers: 
+        - 
+          image: "nginx:1.14.2"
+          name: nginx
+          ports: 
+            - 
+              containerPort: 80
