--- a/pod.yaml
+++ b/pod.yaml
@@ -1,21 +1,19 @@
 apiVersion: v1
+kind: apiVersion: v1
 kind: Pod
 metadata:
-  name: test-pod
+  name: myapp
+  labels:
+    name: myapp
 spec:
-  runtimeClassName: kata-fc
   containers:
-  - name: busybox-ctr
-    image: busybox
-    stdin: true
-    tty: true
+  - name: myapp
+    image: gcr.io/kuar-demo/kuard-amd64:1
     resources:
       limits:
-        cpu: 500m
-        memory: 100Mi
-  - name: nginx-ctr
-    image: nginx
-    resources:
-      limits:
-        cpu: 1500m
-        memory: 100Mi
+        memory: "128Mi"
+        cpu: "500m"
+    ports:
+      - containerPort: 8080
+        name: http
+        protocol: TCP
