--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deploy
+  name: nginx-deployment
   labels:
-  app: nginx-app
+    app: nginx
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: nginx-app
+      app: nginx
   template:
     metadata:
       labels:
-        app: nginx-app
-  spec:
-    containers:
-    - name: nginx-container
-      image: nginx:1.21
-      ports:
-      - containerPort: 80
+        app: nginx
+    spec:
+      containers:
+      - name: ngnix
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
